Re: #144 prevent breaking words to wrap title

--- a/source/sass/search/_object.scss
+++ b/source/sass/search/_object.scss
@@ -29,6 +29,10 @@
     }
 }
 
+.object-title{
+	word-break: normal;
+}
+
 .object-image{
     /*  min-height: 30em;  */
     overflow-y: auto;
